'NestedScrollingParent实现嵌套滑动学习'

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".reflection.ReflectionStudyActivity"/>
+        <activity android:name=".nestedscroll.MyNestedScrollActivity"/>
     </application>
 
 
