--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     implementation depend.constraintlayout()
     implementation 'com.github.1169927533.BaseMavenProject:baseYu:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-
+    implementation 'com.zhy:base-adapter:2.0.0'
 }
