--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.androidx_branch">
     <uses-sdk tools:overrideLibrary="com.zhpan.library:bannerview"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:usesCleartextTraffic="true"
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,6 +23,10 @@
         </activity>
         <activity android:name=".reflection.ReflectionStudyActivity"/>
         <activity android:name=".nestedscroll.MyNestedScrollActivity"/>
+        <activity android:name=".lianxiren.TelActivity"/>
+        <activity android:name=".lianxiren.ActivityA"/>
+        <activity android:name=".fulldialog.DialogActivity"/>
+        <activity android:name=".weixing.WeiXingActivity"/>
     </application>
 
 
