--- a/lib_network/build.gradle
+++ b/lib_network/build.gradle
@@ -44,5 +44,6 @@ dependencies {
 
     api 'com.squareup.retrofit2:retrofit:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.2'//拦截完整的请求链接
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.2'//
+    implementation 'com.alibaba:fastjson:1.2.61'
 }
