--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.aspectj:aspectjtools:1.8.9'
         classpath 'com.pince.gradle_plugin:versionplugin:1.2.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
